welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:3: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.MethodsPicture'
override def run() {
             ^