welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
}
override def run() {
}

def fairev(){
  avance()
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  left()
  avance()
  baisseBrosse()
  leveBrosse()
  recule()
  right()
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  avance()
  left()
  }

def rec() {
  for (a<-1 to 3){
    setCouleurBrosse(Color.yellow)
    fairev()
    setCouleurBrosse(Color.red)
    fairev()
    setCouleurBrosse(Color.blue)
    fairev()
    setCouleurBrosse(Color.green)
    avance()
    avance()
    avance()
    avance()
    avance()
  }
  left()
  avance()
  avance()
  avance()
  avance()
  avance()
  right()
  
}